# vbivbot

./: README.md  pyproject.toml
vbivbot/: app.py
vbivbot/handlers/: payment.py
vbivbot/keyboards/: payment_keyboard.py
